--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
   <h1>Desafios</h1>
+  <a href="https://marmundo.github.io/desafios-js/desafio-mensagens/">Desafio Mensagens</a>
 </body>
 
 </html>
