--- a/index.html
+++ b/index.html
@@ -6,11 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafios</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+    integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <h1>Desafios</h1>
-  <a href="https://marmundo.github.io/desafios-js/desafio-mensagens/">Desafio Mensagens</a>
+  <ul class="list-group">
+    <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-mensagens/">
+        Desafio Mensagens
+      </a></li>
+  </ul>
+
 </body>
 
 </html>
