--- a/desafio-mensagens/index.html
+++ b/desafio-mensagens/index.html
@@ -6,6 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Desafio Mensagens</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css"
+    integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+    integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+    crossorigin="anonymous"></script>
   <style>
     button {
       height: 50px;
@@ -16,12 +21,26 @@
 </head>
 
 <body>
-  <h1>Desafio das Mensagens</h1>
-  <button onclick="bt1()">Botão 1</button>
-  <button onclick="bt2()">Botão 2</button>
-  <button onclick="bt3()">Botão 3</button>
-</body>
+  <div class="container">
+    <div class="row">
+      <h1>Desafio das Mensagens</h1>
+    </div>
+    <div class="row">
+      <div class="col-4">
+        <button class="btn btn-primary" onclick="bt1()">Botão 1</button>
+      </div>
+      <div class="col-4">
+        <button class="btn btn-primary" onclick="bt2()">Botão 2</button>
+      </div>
+      <div class="col-4">
+        <button class="btn btn-primary" onclick="bt3()">Botão 3</button>
+      </div>
+    </div>
 
+
+
+</body>
+</div>
 <script>
   function bt1() {
     alert("Você clicou no 1 botão")
