--- a/index.html
+++ b/index.html
@@ -14,13 +14,18 @@
 </head>
 
 <body>
-  <h1>Desafios</h1>
-  <ul class="list-group">
-    <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-mensagens/">
-        Desafio Mensagens
-      </a></li>
-  </ul>
-
+  <div class="container">
+    <div class="row">
+      <h1>Desafios</h1>
+    </div>
+    <div class="row">
+      <ul class="list-group">
+        <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-mensagens/">
+            Desafio Mensagens
+          </a></li>
+      </ul>
+    </div>
+  </div>
 </body>
 
 </html>
