--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-mensagens/">
             Desafio Mensagens
           </a></li>
+        <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-boasvindas/">
+            Desafio Boas Vindas
+          </a></li>
       </ul>
     </div>
   </div>
