--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-boasvindas/">
             Desafio Boas Vindas
           </a></li>
+        <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-antes-depois/">
+            Desafio Antes e Depois
+          </a></li>
       </ul>
     </div>
   </div>
