--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
         <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-antes-depois/">
             Desafio Antes e Depois
           </a></li>
+        <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-troco/">
+            Desafio Troco
+          </a></li>
       </ul>
     </div>
   </div>
