--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
         <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-troco/">
             Desafio Troco
           </a></li>
+        <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-conversor/">
+            Desafio Conversor
+          </a></li>
       </ul>
     </div>
   </div>
