adds conversor temperatura

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
         <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-conversor/">
             Desafio Conversor
           </a></li>
+        <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-conversor-temperatura/">
+            Desafio Conversor Temperatura
+          </a></li>
       </ul>
     </div>
   </div>
