--- a/desafio-conversor-temperatura/index.html
+++ b/desafio-conversor-temperatura/index.html
@@ -75,7 +75,7 @@
       var temperatura = prompt("Digite uma temperatura em Celsius?")
       var content = document.querySelector("#content");
 
-      content.innerHTML = `<h3>A temperatura de ${temperatura} metros, corresponte a...</h3>\n
+      content.innerHTML = `<h3>A temperatura de ${temperatura} C, corresponte a...</h3>\n
       <p>
         ${(temperatura * 9 / 5) + 32} F (Fahrenheit) </p>
         <p>${Number(temperatura) + 273.15} K (Kelvin)\n </p>
