--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
         <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-conversor-temperatura/">
             Desafio Conversor Temperatura
           </a></li>
+        <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-caixa/">
+            Desafio Caixa
+          </a></li>
       </ul>
     </div>
   </div>
