--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-caixa/">
             Desafio Caixa
           </a></li>
+          <li class="list-group-item"><a href="https://marmundo.github.io/desafios-js/desafio-simon/">
+            Desafio Simon
+          </a></li>
       </ul>
     </div>
   </div>
