adiciona painel de ranking

--- a/desafio-simon/index.html
+++ b/desafio-simon/index.html
@@ -21,6 +21,12 @@
   </audio>
 </head>
 <body>
+  <div id="ranking">
+    <h2>Ranking</h2>
+    <div id="ranking-pontuacao">
+      <p>Marcelo -- 10</p>
+    </div>
+  </div>
   <div id="outer-circle">
     <div id="topleft"></div>
     <div id="topright"></div>
