--- a/desafio-simon/index.html
+++ b/desafio-simon/index.html
@@ -24,7 +24,7 @@
   <div id="ranking">
     <h2>Ranking</h2>
     <div id="ranking-pontuacao">
-      <p>Marcelo -- 10</p>
+      <!-- <p>Marcelo -- 10</p> -->
     </div>
   </div>
   <div id="outer-circle">
