coloca a ordenação em ordem decrescente

--- a/desafio-simon/index.html
+++ b/desafio-simon/index.html
@@ -27,6 +27,12 @@
       <!-- <p>Marcelo -- 10</p> -->
     </div>
   </div>
+  <select name="" id="niveis">
+    <option value="10">Selecione a dificuldade</option>
+    <option value="10">Fácil</option>
+    <option value="20">Médio</option>
+    <option value="50">Difícil</option>
+  </select>
   <div id="outer-circle">
     <div id="topleft"></div>
     <div id="topright"></div>
