--- a/desafio-simon/index.html
+++ b/desafio-simon/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Simon</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css?family=Original+Surfer&effect=emboss" rel="stylesheet" type="text/css">
   <audio id="clip1">
@@ -35,6 +35,14 @@
       <option value="50">Difícil</option>
     </select>
   </form>
+  <div id="socialmedia" class="modal">
+    <div class="modal-content">
+      <span class="close">&times;</span>
+      <h3>Compartilhe nas redes sociais</h3>
+      <button id="fb">FaceBook</button>
+      <button id="twitter">Twitter</button>
+    </div>
+  </div>
   <div id="outer-circle">
     <div id="topleft"></div>
     <div id="topright"></div>
